# dwp-abbrev

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  dwp-abbrev-rs-13514b4a73512ac1.js  dwp-abbrev-rs-13514b4a73512ac1_bg.wasm  dwp-abbrev-rs-3698cacc5c189c46.js  dwp-abbrev-rs-3698cacc5c189c46_bg.wasm  dwp-abbrev-rs-609e217c965e35ba.js  dwp-abbrev-rs-609e217c965e35ba_bg.wasm  dwp-abbrev-rs-908d57ce07af47a0_bg.wasm  dwp-abbrev-rs-def9a51d02723633.js  dwp-abbrev-rs-def9a51d02723633_bg.wasm  dwp-abbrev-rs-f87f56e6daa89edc_bg.wasm  dwp-abbrev.js  dwp-abbrev.js.map  index.html  netlify.toml  package.json  settings.gradle.kts  styles.css  tsconfig.json
.github/workflows/: build-deploy.yml  detekt.yml  gradle-pr.yml  pull-request.yml
dict-preprocessor/: Cargo.toml  raw-abbrevs.json
dict-preprocessor/src/: main.rs
snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
snippets/dioxus-interpreter-js-dab579f08da5298b/: inline0.js
src/: abbreviation-filter.ts  abbreviation.rs  abbreviations.json  dwp-abbrev-app.ts  filter.rs  filter.test.ts  lib.rs  main.rs  on_event.rs
src/jsMain/kotlin/com/omricat/dwp/abbrev/: Abbreviation.kt  Abbreviations.kt  Filter.kt  Main.kt
src/jsMain/resources/: index.html
web-frontend/: Cargo.toml  index.html
web-frontend/src/: abbreviation.rs  abbreviations.json  main.rs
