[workspace]
members = [
    "web-frontend",
    "dict-preprocessor"
]
resolver = "2"

[workspace.package]
rust-version = "1.84"
version = "0.1.0"
authors = ["Joseph Cooper <cooper.joseph@gmail.com>"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
