[package]
name = "dwp-abbrev-rs"
rust-version = "1.84"
version = "0.1.0"
authors = ["Joseph Cooper <cooper.joseph@gmail.com>"]
edition = "2021"
license = "MPL-2"

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-web = "0.6.2"
once_cell = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wasm-bindgen-test = "0.3"
