[package]
name = "dwp-abbrev-rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = "0.3.1"
dioxus-web = "0.3.0"
once_cell = "1.17.0"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
